--- a/css/styles.css
+++ b/css/styles.css
@@ -55,6 +55,12 @@
 #themessage{
     padding-top: 140px;
 }
+.first-list{
+    padding-top: 40px;
+}
+.hidden-content{
+    display: none;
+}
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
