--- a/css/styles.css
+++ b/css/styles.css
@@ -56,7 +56,7 @@
     padding-top: 140px;
 }
 .first-list{
-    padding-top: 40px;
+    padding-top: 20px;
 }
 .hidden-content{
     display: none;
@@ -74,13 +74,21 @@
 .mForm{
     padding-top: 70px;
 }
+form#contact-form::-webkit-input-placeholder { /* Edge */
+    color: white;
+  }
+  
+  form#contact-form :-ms-input-placeholder { /* Internet Explorer */
+    color: white;
+  }
+  
+  form#contact-form ::placeholder {
+    color: white;
+  } 
 .isInput{
     background-color: transparent;
 }
-::placeholder { 
-    color: white;
-    opacity: 1;
-  }
+
 
   .portfolio{
       max-width: 80%;
